--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "js-cookie": "^3.0.5",
     "next": "13.4.2",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-icon": "^1.0.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.1",
     "react-toastify": "^9.1.3",
+    "reactstrap": "^9.1.10",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
